samples/_failures_safe/1761519844_05c725_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2227c7c8.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_2227c7c8.c:148:9: error: expected expression at end of input
  148 |         for (int j = 0; j <
      |         ^~~
./samples/SAFE/__tmp_2227c7c8.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2227c7c8.c:148:9: error: expected declaration or statement at end of input
